<resources>
    <string name="app_name">Health Book</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="title_activity_home">Home</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="Open">nab-bar</string>
    <string name="Close">nab-bar</string>
        <string name="BMI">BMR (Basal Metabolic Rate)  is a measurment \n
                          of the number of calories needed to perform \n
                          our body\'s most basic functionlike breathing,\n
                          circulation,cell production etc</string>
 <string name="Calorie">A calorie is a unit that is used to measure\n
                          energy. The Calorie you see on a food package\n
                          is actually a kilocalorie, or 1,000 calories.\n
                          A Calorie (kcal) is the amount of energy needed\n
                          to raise the temperature of 1 kilogram of water \n
                         1 degree Celsius.\n
        1. 1 gram carb=4 calories.\n
        2. 1 gram protien =4 calories\n
        3. 1 gram  fact= 9 calories
    </string>
   <string name="Lowdiet">This diet contains 20-30 percent carbohydrate,\n
                          35-45 percent protein,and 30-35 percent fat.\n
                          In this type of diet carbohydrate should not\n
                           contain more than 20-30 percent.
</string>
   <string name="zone_diet">
                          For  maintenance of weight zone diet is perfect.\n
                          Here carbohydrates contains 40 percent, protein \n
                          30 percent and fat 30 percent.
    </string>
    <string name="hi_carb_diet">
            In high carb diet carbohydrate contains\n
            60 percent and the others are 25 percent\n
            protein and 15 percent fat. This diet is\n
            for those who want to gain weight.
    </string>
</resources>
