<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD1CECE"
    android:orientation="vertical"
    tools:context="com.smartalarm.new_maha.Hepl">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_below="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/add_reminder_layout_top"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_height="80dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Help"
            android:textSize="27dp"
            android:textStyle="bold"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:textColor="#FBFFFDFC"/>

    </LinearLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BMI :"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>
                <TextView
                    android:id="@+id/help_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BMI"
                    android:textSize="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CALORIES :"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>
                <TextView
                    android:id="@+id/help_t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Calorie"
                    android:textSize="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LOW CARB DIET :"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>
                <TextView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lowdiet"
                    android:textSize="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" MAINTAIN DIET :"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>
                <TextView
                    android:id="@+id/hel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zone_diet"
                    android:textSize="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#FF0D0D0D"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
               android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" HIGH CARB DIET :"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#FF0D0D0D"/>
                <TextView
                    android:id="@+id/help_txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hi_carb_diet"
                    android:textSize="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#FF0D0D0D"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
